Update and rename 2013-03-05-state-sequester.md to 2018-06-10-demo.md

--- a/_posts/2018-06-10-demo.md
+++ b/_posts/2018-06-10-demo.md
@@ -1,12 +1,12 @@
 ---
 layout: posts
 title: Example State Sequester
-desc: On Sunday, February 25, 2013, the White House released documents detailing the projected costs to states of the upcoming sequester. Several news outlets carried the story, however, only the Huffington Post had links to each individual state document.
-permalink: /post/example-state-sequester.html
-shortdesc: On Sunday, February 25, 2013, the White House released documents detailing the projected costs to states of the upcoming sequester.
+desc: Click here to see mapLines demo links.  These might be ephemeral and change often.
+permalink: /post/demo.html
+shortdesc: contains demo links.
 ---
 
-Major Links
+Demo Links
 
 I wanted to test some ideas brewing around.
 
