with update to posts

--- a/_posts/2018-10-29-ecoec.md
+++ b/_posts/2018-10-29-ecoec.md
@@ -6,6 +6,10 @@ permalink: /post/ecoec.html
 shortdesc: links to feeder maps
 ---
 
+Entire Footprint
+----------------
+* Span Map - [map](/coop/ecoec/all_span.html)
+
 Substation 04 - Pierce
 --------------
 * Feeder 1 - [map](/coop/ecoec/pierce_s04_f1.html)
