adding ecoec spans

--- a/_posts/2018-10-29-ecoec.md
+++ b/_posts/2018-10-29-ecoec.md
@@ -6,13 +6,34 @@ permalink: /post/ecoec.html
 shortdesc: links to feeder maps
 ---
 
-Entire Footprint
+Entire Footprints
 ----------------
 * Span Map - [map](/coop/ecoec/all_span.html)
 
 Substation 04 - Pierce
 --------------
+* Span Map - [map](/coop/ecoec/substat_pierce_04.html)
 * Feeder 1 - [map](/coop/ecoec/pierce_s04_f1.html)
 * Feeder 2 - [map](/coop/ecoec/pierce_s04_f2.html)
 * Feeder 3 - [map](/coop/ecoec/pierce_s04_f3.html)
 * Feeder 4 - [map](/coop/ecoec/pierce_s04_f4.html)
+
+Substation 06 - Eufala
+--------------
+* Span Map - [map](/coop/ecoec/substat_eufala_06.html)
+
+Substation 11 - Summit
+--------------
+* Span Map - [map](/coop/ecoec/substat_summit_11.html)
+
+Substation 13 - Onapa
+--------------
+* Span Map - [map](/coop/ecoec/substat_onapa_13.html)
+
+Substation 20 - Bixby
+--------------
+* Span Map - [map](/coop/ecoec/substat_bixby_20.html)
+
+Substation 23 - Texanna
+--------------
+* Span Map - [map](/coop/ecoec/substat_texanna_23.html)
