adding cvec 2703/2803 combined

--- a/_posts/2018-06-10-cvec.md
+++ b/_posts/2018-06-10-cvec.md
@@ -20,4 +20,5 @@ Martins Store Substation
 
 Zions Substation
 ----------------------
+* Feeder 2703 (combined with 2803) - [map](/coop/cvec/szions_f2703.html)
 * Feeder 2706 - [map](/coop/cvec/szions_f2706.html)
